@@ -1,27 +1,45 @@
 /*
  * tkAppInit.c --
  *
- *	Provides a default version of the Tcl_AppInit procedure for use in
- *	wish and similar Tk-based applications.
+ *	Provides a default version of the main program and Tcl_AppInit
+ *	procedure for wish and other Tk-based applications.
  *
  * Copyright (c) 1993 The Regents of the University of California.
  * Copyright (c) 1994-1997 Sun Microsystems, Inc.
+ * Copyright (c) 1998-1999 Scriptics Corporation.
  *
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkAppInit.c,v 1.10 2009/10/21 20:28:54 nijtmans Exp $
+ * RCS: @(#) $Id: tkAppInit.c,v 1.11 2010/09/23 10:01:57 nijtmans Exp $
  */
 
-/* Make sure this file is never compiled with Stubs! */
-#undef USE_TCL_STUBS
-#undef USE_TK_STUBS
 #include "tk.h"
-#include "locale.h"
 
 #ifdef TK_TEST
-extern int		Tktest_Init(Tcl_Interp *interp);
+extern Tcl_PackageInitProc Tktest_Init;
 #endif /* TK_TEST */
+
+/*
+ * The following #if block allows you to change the AppInit function by using
+ * a #define of TCL_LOCAL_APPINIT instead of rewriting this entire file. The
+ * #if checks for that #define and uses Tcl_AppInit if it doesn't exist.
+ */
+
+#ifndef TK_LOCAL_APPINIT
+#define TK_LOCAL_APPINIT Tcl_AppInit
+#endif
+extern int TK_LOCAL_APPINIT(Tcl_Interp *interp);
+
+/*
+ * The following #if block allows you to change how Tcl finds the startup
+ * script, prime the library or encoding paths, fiddle with the argv, etc.,
+ * without needing to rewrite Tk_Main()
+ */
+
+#ifdef TK_LOCAL_MAIN_HOOK
+extern int TK_LOCAL_MAIN_HOOK(int *argc, char ***argv);
+#endif
 
 /*
  *----------------------------------------------------------------------
@@ -35,7 +53,7 @@ extern int		Tktest_Init(Tcl_Interp *interp);
  *	either.
  *
  * Side effects:
- *	Whatever the application does.
+ *	Just about anything, since from here we call arbitrary Tcl code.
  *
  *----------------------------------------------------------------------
  */
@@ -45,26 +63,7 @@ main(
     int argc,			/* Number of command-line arguments. */
     char **argv)		/* Values of command-line arguments. */
 {
-    /*
-     * The following #if block allows you to change the AppInit function by
-     * using a #define of TCL_LOCAL_APPINIT instead of rewriting this entire
-     * file. The #if checks for that #define and uses Tcl_AppInit if it
-     * doesn't exist.
-     */
-
-#ifndef TK_LOCAL_APPINIT
-#define TK_LOCAL_APPINIT Tcl_AppInit
-#endif
-    extern int TK_LOCAL_APPINIT(Tcl_Interp *interp);
-
-    /*
-     * The following #if block allows you to change how Tcl finds the startup
-     * script, prime the library or encoding paths, fiddle with the argv,
-     * etc., without needing to rewrite Tk_Main()
-     */
-
 #ifdef TK_LOCAL_MAIN_HOOK
-    extern int TK_LOCAL_MAIN_HOOK(int *argc, char ***argv);
     TK_LOCAL_MAIN_HOOK(&argc, &argv);
 #endif
 
@@ -98,16 +97,17 @@ Tcl_AppInit(
     if (Tcl_Init(interp) == TCL_ERROR) {
 	return TCL_ERROR;
     }
+
     if (Tk_Init(interp) == TCL_ERROR) {
 	return TCL_ERROR;
     }
     Tcl_StaticPackage(interp, "Tk", Tk_Init, Tk_SafeInit);
+
 #ifdef TK_TEST
     if (Tktest_Init(interp) == TCL_ERROR) {
 	return TCL_ERROR;
     }
-    Tcl_StaticPackage(interp, "Tktest", Tktest_Init,
-            (Tcl_PackageInitProc *) NULL);
+    Tcl_StaticPackage(interp, "Tktest", Tktest_Init, 0);
 #endif /* TK_TEST */
 
     /*
@@ -118,7 +118,8 @@ Tcl_AppInit(
      *     return TCL_ERROR;
      * }
      *
-     * where "Mod" is the name of the module.
+     * where "Mod" is the name of the module. (Dynamically-loadable packages
+     * should have the same entry-point name.)
      */
 
     /*
@@ -130,10 +131,10 @@ Tcl_AppInit(
      * Specify a user-specific startup file to invoke if the application is
      * run interactively. Typically the startup file is "~/.apprc" where "app"
      * is the name of the application. If this line is deleted then no user-
-     * -specific startup file will be run under any conditions.
+     * specific startup file will be run under any conditions.
      */
 
-    Tcl_SetVar(interp, "tcl_rcFileName", "~/.wishrc", TCL_GLOBAL_ONLY);
+    (Tcl_SetVar)(interp, "tcl_rcFileName", "~/.wishrc", TCL_GLOBAL_ONLY);
     return TCL_OK;
 }
 
